# ex-actor

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  BUILD  BUILD.bazel  CLAUDE.md  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE.bazel  _typos.toml  codecov.yml  gen_build_dir.sh  regen_build_dir.sh
.github/workflows/: check_bazel_build.yml  cmake-multi-platform.yml  cmake-single-platform.yml  cmake_multi_platform.yml  coverage.yml  deploy_doc.yml  doc_test.yml  import_test.yml  lint.yaml  spelling.yml
cmake/: CPM.cmake  ex_actor-config.cmake.in
docs/: build.sh  doc_cli.py  doc_cli.sh  mkdocs.yml  serve.sh
docs/contents/: contributing.md  development.md  distributed_mode.md  index.md  installation.md  schedulers.md  tutorial.md
docs/hooks/: copy_root_files.py
include/ex_actor/: api.h
include/ex_actor/3rd_lib/: README.md
include/ex_actor/3rd_lib/absl/algorithm/: algorithm.h
include/ex_actor/3rd_lib/absl/base/: attributes.h  config.h  macros.h  nullability.h  optimization.h  options.h  policy_checks.h  port.h
include/ex_actor/3rd_lib/absl/base/internal/: iterator_traits.h  throw_delegate.h
include/ex_actor/3rd_lib/absl/container/: inlined_vector.h
include/ex_actor/3rd_lib/absl/container/internal/: compressed_tuple.h  inlined_vector.h
include/ex_actor/3rd_lib/absl/functional/: any_invocable.h
include/ex_actor/3rd_lib/absl/functional/internal/: any_invocable.h
include/ex_actor/3rd_lib/absl/hash/internal/: weakly_mixed_integer.h
include/ex_actor/3rd_lib/absl/memory/: memory.h
include/ex_actor/3rd_lib/absl/meta/: type_traits.h
include/ex_actor/3rd_lib/absl/types/: span.h
include/ex_actor/3rd_lib/absl/types/internal/: span.h
include/ex_actor/3rd_lib/absl/utility/: utility.h
include/ex_actor/3rd_lib/cppzmq/: zmq.hpp  zmq_addon.hpp
include/ex_actor/3rd_lib/daking/: MPSC_queue.h
include/ex_actor/3rd_lib/moody_camel_queue/: blockingconcurrentqueue.h  concurrentqueue.h  lightweightsemaphore.h
include/ex_actor/detail/: actor.h  actor_creation.h  alias.h  reflect.h  scheduler.h  util.h
include/ex_actor/internal/: actor.h  actor_config.h  actor_creation.h  actor_ref.h  actor_ref_deserialization.h  actor_registry.h  alias.h  basic_actor_ref.h  common_structs.h  constants.h  container.h  global_registry.h  local_actor_ref.h  logging.h  message.h  network.h  platform.h  reflect.h  remote_handler_registry.h  scheduler.h  serialization.h  util.h
include/ex_actor/internal/actor_ref_serialization/: actor_ref_deserialization_info.h  actor_ref_serialization.h  actor_ref_serialization_reader.h
include/ex_actor/internal/scheduler/: all.h  bucketed_weak_priority_thread_pool.h  core_pinned_thread_pool.h  priority_thread_pool.h  scheduler_operation.h  scheduler_sender.h  scheduler_union.h  stoppable_scheduler_completion_signatures.h  weak_priority_thread_pool.h  work_sharing_thread_pool.h  work_stealing_thread_pool.h
include/ex_actor/internal/scheduler/shared/: scheduler_sender.h
scripts/: format.py  format.sh  regen_build_dir.py  regen_build_dir.sh
src/ex_actor/3rd_lib/absl/base/internal/: throw_delegate.cc
src/ex_actor/internal/: actor_registry.cc  global_registry.cc  logging.cc  network.cc  platform.cc
src/ex_actor/internal/scheduler/: bucketed_weak_priority_thread_pool.cc  core_pinned_thread_pool.cc  priority_thread_pool.cc  weak_priority_thread_pool.cc  work_sharing_thread_pool.cc
test/: CMakeLists.txt  async_init_test.cc  basic_api_test.cc  complex_api_test.cc  complex_api_test_constructors.cc  complex_api_test_methods.cc  complex_api_test_structs.cc  control_plane_isolation_test.cc  debug_info_test.cc  distributed_test.cc  doc_test.py  dynamic_connectivity_test.cc  dynamic_connectivity_test.py  global_registry_test.cc  heartbeat_test.cc  heartbeat_test.py  letter_count.cc  logging_test.cc  mailbox_test.cc  manual_activation_test.cc  multi_process_test.cc  multi_process_test.py  multiple_inheritance_test.cc  network_test.cc  scheduler_test.cc  serialization_test.cc  shuffle_merge_test.cc  skynet_test.cc  spawn_construction_env_test.cc  static_scheduler_fiasco_test.cc  stress_test.cc  thread_safe_logging_test.cc  tsan_suppression.txt  user_defined_scheduler_test.cc  util_test.cc
test/import_test/: main.cc
test/import_test/bazel_bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  build_ci.sh  main.cc
test/import_test/bazel_workspace/: BUILD  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  build.sh  build_ci.sh  main.cc
test/import_test/cmake_cpm/: CMakeLists.txt  CPM.cmake  README.md  build.sh  build_ci.sh  main.cc
test/import_test/cmake_install_find_package/: CMakeLists.txt  README.md  build.sh  build_ci.sh  main.cc
