load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

cmake(
    name = "ex_actor",
    lib_source = ":all_srcs",
    cache_entries = {
      "EX_ACTOR_BUILD_TESTS": "OFF",
    },
    out_headers_only = True,
)
