load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

cmake(
    name = "ex_actor",
    cache_entries = {
        "EX_ACTOR_BUILD_TESTS": "OFF",
    },
    generate_args = ["-GNinja"],
    lib_source = ":all_srcs",
    out_static_libs = [
        "libex_actor_network.a",
        "libreflectcpp.a",
        "libcapnpc.a",
        "libcapnp-json.a",
        "libcapnp-rpc.a",
        "libcapnp-websocket.a",
        "libcapnp.a",
        "libkj-async.a",
        "libkj-gzip.a",
        "libkj-http.a",
        "libkj-test.a",
        "libkj-tls.a",
        "libkj.a",
        "libspdlog.a",
        "libsystem_context.a",
        "libzmq.a",
    ],
)
