load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

cc_library(
    name = "ex_actor",
    srcs = [
        "src/ex_actor/internal/network.cc",
    ],
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    deps = [
        "@capnp-cpp//src/capnp",
        "@capnp-cpp//src/capnp:capnpc",
        "@cppzmq",
        "@libzmq",
        "@reflect-cpp",
        "@spdlog",
        "@stdexec",
    ],
)

cc_test(
    name = "distributed_test",
    srcs = [
        "test/distributed_test.cc",
    ],
    linkstatic = True,
    deps = [
        ":ex_actor",
        "@googletest//:gtest_main",
    ],
)

cmake(
    name = "ex_actor_cmake",
    cache_entries = {
        "EX_ACTOR_BUILD_TESTS": "OFF",
    },
    generate_args = ["-GNinja"],
    lib_source = ":all_srcs",
    out_static_libs = [
        "libex_actor.a",
        "libreflectcpp.a",
        "libcapnpc.a",
        "libcapnp-json.a",
        "libcapnp-rpc.a",
        "libcapnp-websocket.a",
        "libcapnp.a",
        "libkj-async.a",
        "libkj-gzip.a",
        "libkj-http.a",
        "libkj-test.a",
        "libkj-tls.a",
        "libkj.a",
        "libspdlog.a",
        "libsystem_context.a",
        "libzmq.a",
    ],
)
