module(
    name = "ex_actor",
    version = "0.1",
)

bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
bazel_dep(name = "rules_cc", version = "0.2.3")
bazel_dep(name = "cppzmq", version = "4.10.0.bcr.1")
bazel_dep(name = "libzmq", version = "4.3.5.bcr.4")
bazel_dep(name = "capnp-cpp", version = "1.1.0")
bazel_dep(name = "spdlog", version = "1.16.0.bcr.1")
bazel_dep(name = "reflect-cpp", version = "0.22.0")
bazel_dep(name = "stdexec", version = "5d9f3bfb032e9d71b2292b7add7d90cbf9d037a9")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
